@@ -2,6 +2,7 @@ gcc-10 (10-20200418-2) UNRELEASED; urgency=medium
 
   * Fix local patch for PR jit/87808. Closes: #954898.
   * gcc-snapshot: Depend on nvptx-tools with the nvptx offload compiler.
+  * Provide symlinks for the offload target tools in <gcclibdir>/accel/<target>.
 
  -- Matthias Klose <doko@debian.org>  Mon, 20 Apr 2020 10:08:49 +0200
 
